--- a/src/components/shopify/components/FavoritePictures/index.scss
+++ b/src/components/shopify/components/FavoritePictures/index.scss
@@ -10,6 +10,7 @@
 
   .delete-all {
     min-width: 150px;
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
